[package]
authors = ["arkworks contributors"]
categories = ["cryptography"]
description = "An implementation of the Groth 2016 zkSNARK proof system"
documentation = "https://docs.rs/ark-groth16/"
edition = "2021"
homepage = "https://arkworks.rs"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "Groth-Maller"]
license = "MIT/Apache-2.0"
name = "ark-groth16"
repository = "https://github.com/arkworks-rs/groth16"
version = "0.3.0"

################################# Dependencies ################################

[dependencies]
ark-crypto-primitives = {version = "0.4.0-alpha", default-features = false, features = ["snark", "crh", "r1cs"]}
ark-ec = {version = "0.4.0-alpha", default-features = false}
ark-ff = {version = "0.4.0-alpha", default-features = false}
ark-poly = {version = "0.4.0-alpha", default-features = false}
ark-r1cs-std = {version = "0.4.0-alpha", default-features = false, optional = true}
ark-relations = {version = "0.4.0-alpha", default-features = false}
ark-serialize = {version = "0.4.0-alpha", default-features = false, features = ["derive"]}
ark-std = {version = "0.4.0-alpha", default-features = false}

derivative = {version = "2.0", features = ["use_core"], optional = true}
tracing = {version = "0.1", default-features = false, features = ["attributes"], optional = true}

rayon = {version = "1", optional = true}

[dev-dependencies]
ark-bls12-377 = {version = "0.4.0-alpha", default-features = false, features = ["curve"]}
ark-bls12-381 = {version = "0.4.0-alpha", default-features = false, features = ["curve"]}
ark-bn254 = {version = "0.4.0-alpha", default-features = false, features = ["curve"]}
ark-cp6-782 = {version = "0.4.0-alpha", default-features = false}
ark-mnt4-298 = {version = "0.4.0-alpha", default-features = false, features = ["r1cs", "curve"]}
ark-mnt4-753 = {version = "0.4.0-alpha", default-features = false, features = ["r1cs", "curve"]}
ark-mnt6-298 = {version = "0.4.0-alpha", default-features = false, features = ["r1cs"]}
ark-mnt6-753 = {version = "0.4.0-alpha", default-features = false, features = ["r1cs"]}
ark-r1cs-std = {version = "0.4.0-alpha", default-features = false}
csv = {version = "1"}
hex = "0.4.3"

[features]
default = ["parallel"]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]
print-trace = ["ark-std/print-trace"]
r1cs = ["ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std"]

[[bench]]
harness = false
name = "groth16-benches"
path = "benches/sha_bench.rs"
required-features = ["std"]

[profile.release]
incremental = true
lto = "thin"
opt-level = 3
panic = 'abort'

[profile.bench]
debug = false
debug-assertions = false
incremental = true
lto = "thin"
opt-level = 3
rpath = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 3
